--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         padding: 0;
       }
     </style>
+    <link rel="stylesheet" href="static/css/bootstrap.css">
   </head>
   <body>
     <div id="app"></div>
