--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>education-web</title>
+    <title>优仕通</title>
     <style>
       * {
         margin: 0;
