--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>优仕通</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>优仕通教育</title>
     <style>
       * {
         margin: 0;
